erDiagram
    PROVEEDORES ||--o{ PRODUCTOS : "suministra"
    PROVEEDORES ||--o{ TRANSACCIONES : "participa"
    PRODUCTOS ||--o{ TRANSACCIONES : "tiene"

    PROVEEDORES {
        int id_proveedor PK
        varchar nombre
        varchar direccion
        varchar telefono
        varchar email UK 
    }

    PRODUCTOS {
        int id_producto PK
        varchar nombre
        text descripcion
        decimal precio
        int cantidad_inventario
        int id_proveedor FK
    }

    TRANSACCIONES {
        int id_transaccion PK
        varchar tipo
        date fecha
        int cantidad
        int id_producto FK
        int id_proveedor FK
    }
